Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -12,6 +12,14 @@ For further information on ACI, check the documentation here: https://docs.micro
 ##  Scenarios
 
 
+## Use Azure Cloud Shell to run Azure CLI commands
+The Azure Cloud Shell is a free interactive shell that you can use to run the Azure CLI steps in this walkthrough. 
+It has common Azure tools pre-installed and configured to use with your Azure account. 
+
+The easiest way to launch the Azure Cloud Shell is by clicking on the Cloud Shell button on the menu in the upper right of the Azure portal, as shown in the image below:
+
+![image](https://user-images.githubusercontent.com/1712635/38158420-f9b24c5a-3448-11e8-8c1f-e5119bd4119c.png)
+
 ## Create a resource group for eShopModernized and ACI
 Azure container instances, like all Azure resources, must be placed in a resource group, a logical collection into which Azure resources are deployed and managed.
 
