--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -20,7 +20,7 @@ The easiest way to launch the Azure Cloud Shell is by clicking on the Cloud Shel
 
 ![image](https://user-images.githubusercontent.com/1712635/38158420-f9b24c5a-3448-11e8-8c1f-e5119bd4119c.png)
 
-## OPTIONAL: Use Azure CLI from your local PC/Mac
+## (Optional) Use Azure CLI from your local PC/Mac
 
 Optionally, you can also use a local installation of the Azure CLI instead of Azure Cloud Shell. 
 If you choose to install and use the Azure CLI locally, make sure you are using the latest version of Azure CLI, at least Azure CLI 2.0. 
