--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -36,4 +36,13 @@ The following example creates a resource group named `eShopModernizedACI` in the
 
 `az group create --name eShopModernizedACI --location westus`
 
+## Create/Deploy the SQL Server container into ACI 
+
+You can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
+You can optionally expose the container to the internet by specifying a DNS name label.
+
+Now, let's create your MSSQL container for the eShopModernizing apps with the following command:
+
+
+
 ================ TBD ==================
