Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -41,7 +41,11 @@ The following example creates a resource group named `eShopModernizedACI` in the
 You can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
 You can optionally expose the container to the internet by specifying a DNS name label.
 
-Now, let's create your MSSQL container for the eShopModernizing apps with the following command:
+Now, let's create your MSSQL container for the eShopModernizing apps with a command similar to the following:
+
+`az container create --image microsoft/mssql-server-windows-developer --resource-group YoureShopModernizedACIResGroup --location westus --name your-mssql-windows-eshop-container-group --os-type Windows --cpu 3 --memory 3.5 --dns-name-label your-eshop-sql --ip-address public --ports 1433 --environment-variables ACCEPT_EULA=Y SA_PASSWORD=YourSQLPassword --verbose`
+
+
 
 
 
