Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -38,6 +38,8 @@ The following example creates a resource group named `eShopModernizedACI` in the
 
 ## Create/Deploy the SQL Server container into ACI 
 
+In production environments, we recommend to migrate/use Azure SQL Database which provides High Availability and many more PaaS features. However, for a Dev/Test environment, you can deploy a SQL Server container into ACI. 
+
 You can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
 You can optionally expose the container to the internet by specifying a DNS name label.
 
@@ -45,8 +47,10 @@ Now, let's create your MSSQL container for the eShopModernizing apps with a comm
 
 `az container create --image microsoft/mssql-server-windows-developer --resource-group YoureShopModernizedACIResGroup --location westus --name your-mssql-windows-eshop-container-group --os-type Windows --cpu 3 --memory 3.5 --dns-name-label your-eshop-sql --ip-address public --ports 1433 --environment-variables ACCEPT_EULA=Y SA_PASSWORD=YourSQLPassword --verbose`
 
+After a while, the command's execution will respond with the container information, like in the following execution:
 
+![image](https://user-images.githubusercontent.com/1712635/38328528-01ad06ce-3800-11e8-94c4-d775eb1de47f.png)
 
-
-
+**IMPORTANT SECURITY NOTE:**
+Note that in this sample SQL Server container to be deployed in ACI, you are publishing the SQL Server port (1433) on a public IP with a related public DNS name. This is okay for a test if you want to access the SQL Server container from [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms) at your local dev machine, but for more permanent SQL Server deployments, you should not make the SQL Server container with public/Internet access, but only allowing internal access from Azure.
 ================ TBD ==================
