Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -47,9 +47,20 @@ Now, let's create your MSSQL container for the eShopModernizing apps with a comm
 
 `az container create --image microsoft/mssql-server-windows-developer --resource-group YoureShopModernizedACIResGroup --location westus --name your-mssql-windows-eshop-container-group --os-type Windows --cpu 3 --memory 3.5 --dns-name-label your-eshop-sql --ip-address public --ports 1433 --environment-variables ACCEPT_EULA=Y SA_PASSWORD=YourSQLPassword --verbose`
 
-After a while, the command's execution will respond with the container information, like in the following execution:
+After a few seconds, the command's execution will respond with the container information, like in the following execution:
 
 ![image](https://user-images.githubusercontent.com/1712635/38328528-01ad06ce-3800-11e8-94c4-d775eb1de47f.png)
+
+It is important to note that you won't be able to use the container right away (that's why the initial state in the JSON response says **"provisioningState": "Creating"**) so you'll need to wait a few minutes until the SQL image is pulled into ACI. Then, it'll be ready to use.
+
+You can check the state of the container/container-group with the command `az container show` like the following command:
+
+`az container show --name your-mssql-windows-eshop-container-group --resource-group YoureShopModernizedACIResGroup`
+
+The SQL container will be ready to use when you see the following in the response:
+**"provisioningState": "Succeeded"**
+
+
 
 **IMPORTANT SECURITY NOTE:**
 Note that in this sample SQL Server container to be deployed in ACI, you are publishing the SQL Server port (1433) on a public IP with a related public DNS name. This is okay for a test if you want to access the SQL Server container from [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms) at your local dev machine, but for more permanent SQL Server deployments, you should not make the SQL Server container with public/Internet access, but only allowing internal access from Azure.
