Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -60,7 +60,21 @@ You can check the state of the container/container-group with the command `az co
 The SQL container will be ready to use when you see the following in the response:
 **"provisioningState": "Succeeded"**
 
+It is also important to find out what's its final public IP and fully qualified DNS name that you can find as part of the JSON response:
 
+`  "ipAddress": {`
+    `"additionalProperties": {},`
+    `"dnsNameLabel": "your-eshop-sql",`
+    `"fqdn": "your-eshop-sql.westus.azurecontainer.io",`
+    `"ip": "21.91.35.39",`
+    `"ports": [`
+      `{`
+        `"additionalProperties": {},`
+        `"port": 1433,`
+        `"protocol": "TCP"`
+      `}`
+    `]`
+  `},`
 
 **IMPORTANT SECURITY NOTE:**
 Note that in this sample SQL Server container to be deployed in ACI, you are publishing the SQL Server port (1433) on a public IP with a related public DNS name. This is okay for a test if you want to access the SQL Server container from [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms) at your local dev machine, but for more permanent SQL Server deployments, you should not make the SQL Server container with public/Internet access, but only allowing internal access from Azure.
