Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -63,19 +63,19 @@ The SQL container will be ready to use when you see the following in the respons
 It is also important to find out what's its final public IP and fully qualified DNS name that you can find as part of the JSON response:
 
 `
-  "ipAddress": {
-    "additionalProperties": {},
-    "dnsNameLabel": "eshopmodernized-sql",
-    "fqdn": "eshopmodernized-sql.westus.azurecontainer.io",
-    "ip": "13.91.35.39",
-    "ports": [
-      {
+      "ipAddress": {
         "additionalProperties": {},
-        "port": 1433,
-        "protocol": "TCP"
-      }
-    ]
-  },
+        "dnsNameLabel": "your-eshop-sql",
+        "fqdn": "your-eshop-sql.westus.azurecontainer.io",
+        "ip": "25.91.35.39",
+        "ports": [
+          {
+            "additionalProperties": {},
+            "port": 1433,
+            "protocol": "TCP"
+          }
+        ]
+      },
 `
 
 **IMPORTANT SECURITY NOTE:**
