--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -76,6 +76,12 @@ It is also important to find out what's its final public IP and fully qualified 
         ]
       },
 
+To view the container's logs you can run the following command where you can see that SQL Server was correctly started:
+
+`az container logs --resource-group YoureShopModernizedACIResGroup  --name your-mssql-windows-eshop-container-group`
+
+![image](https://user-images.githubusercontent.com/1712635/38329793-b641ee1c-3803-11e8-8f61-86c778571f82.png)
+
 **IMPORTANT SECURITY NOTE:**
 Note that in this sample SQL Server container to be deployed in ACI, you are publishing the SQL Server port (1433) on a public IP with a related public DNS name. This is okay for a test if you want to access the SQL Server container from [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms) at your local dev machine, but for more permanent SQL Server deployments, you should not make the SQL Server container with public/Internet access, but only allowing internal access from Azure.
 ================ TBD ==================
