--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -84,8 +84,21 @@ To view the container's logs you can run the following command where you can see
 
 Finally, you could even connect to the SQL Server container in ACI with [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms), as shown below:
 
+Connect to the SQL Server container in ACI:
+
+Browse the server:
+
+
 --------- TBD ----------
 
 **IMPORTANT SECURITY NOTE:**
 Note that in this sample SQL Server container to be deployed in ACI, you are publishing the SQL Server port (1433) on a public IP with a related public DNS name. This is okay for a test if you want to access the SQL Server container from [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms) at your local dev machine, but for more permanent SQL Server deployments, you should not make the SQL Server container with public/Internet access, but only allowing internal access from Azure.
 ================ TBD ==================
+
+
+## Create/Deploy the ASP.NET MVC app container into ACI
+This walkthrough explains the steps on how to deploy the ASP.NET MVC app container into ACI, but very similar steps could be performed for the ASP.NET Web Forms app container or the WCF Service container.
+
+
+
+
