Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -10,7 +10,9 @@ Azure Container Instances makes it easy to create and manage Docker containers i
 For further information on ACI, check the documentation here: https://docs.microsoft.com/en-us/azure/container-instances/ 
 
 ##  Scenarios
+There can be variations about deploying the eShopModernizing apps into ACI such as deploying just one of the apps (MVC app, WebForms app or WCF service). In this global scenario shown below you can see the the apps deployed as containers plus the SQL Server container deployed into ACI (Azure Container Instances).
 
+============ TBD ===============
 
 ## Use Azure Cloud Shell to run Azure CLI commands
 The Azure Cloud Shell is a free interactive shell that you can use to run the Azure CLI steps in this walkthrough. 
