Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -88,8 +88,11 @@ Finally, you could even connect to the SQL Server container in ACI with [SQL Ser
 
 Connect to the SQL Server container in ACI:
 
-Browse the server:
+![image](https://user-images.githubusercontent.com/1712635/38333879-aff52212-380e-11e8-925a-5647117929ea.png)
 
+Browse SQL Server in the container at ACI:
+
+![image](https://user-images.githubusercontent.com/1712635/38333956-e77845de-380e-11e8-8177-fc7b94a0bf9f.png)
 
 --------- TBD ----------
 
