--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -94,6 +94,12 @@ Browse SQL Server in the container at ACI:
 
 ![image](https://user-images.githubusercontent.com/1712635/38334047-291c2b40-380f-11e8-89ac-4f78d40594b9.png)
 
+### Deleting the SQL container from ACI:
+You can delete the SQL container from ACI with:
+
+`az container delete --name your-mssql-windows-eshop-container-group --resource-group YoureShopModernizedACIResGroup`
+
+
 --------- TBD ----------
 
 **IMPORTANT SECURITY NOTE:**
