--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -40,7 +40,7 @@ The following example creates a resource group named `eShopModernizedACI` in the
 
 ## Create/Deploy the SQL Server container into ACI 
 
-In production environments, we recommend to migrate/use Azure SQL Database which provides High Availability and many more PaaS features. However, for a Dev/Test environment, you can deploy a SQL Server container into ACI. 
+Note: In production environments, we recommend to migrate/use Azure SQL Database which provides High Availability and many more PaaS features. However, for a Dev/Test environment, you can deploy a SQL Server container into ACI, as in this example. 
 
 You can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
 You can optionally expose the container to the internet by specifying a DNS name label.
@@ -102,14 +102,23 @@ You can delete the SQL container from ACI with:
 
 --------- TBD ----------
 
-**IMPORTANT SECURITY NOTE:**
+**IMPORTANT SECURITY NOTE FOR THE SQL CONTAINER:**
 Note that in this sample SQL Server container to be deployed in ACI, you are publishing the SQL Server port (1433) on a public IP with a related public DNS name. This is okay for a test if you want to access the SQL Server container from [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms) at your local dev machine, but for more permanent SQL Server deployments, you should not make the SQL Server container with public/Internet access, but only allowing internal access from Azure.
-================ TBD ==================
 
 
 ## Create/Deploy the ASP.NET MVC app container into ACI
 This walkthrough explains the steps on how to deploy the ASP.NET MVC app container into ACI, but very similar steps could be performed for the ASP.NET Web Forms app container or the WCF Service container.
 
+As mentioned, you can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
+You can optionally expose the container to the internet by specifying a DNS name label.
+
+Now, let's create your ASP.NET MVC Windows Container from eShopModernizing with a command similar to the following:
+
+TBD az container create ---------
+
+After a few seconds, the command's execution will respond with the container information, like in the following execution:
+
+TBD - SCREENSHOT
 
 
 
