Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -84,6 +84,10 @@ To view the container's logs you can run the following command where you can see
 
 ![image](https://user-images.githubusercontent.com/1712635/38329793-b641ee1c-3803-11e8-8f61-86c778571f82.png)
 
+At this point you should be able to see the SQL Server Windows Container in Azure's portal within your Azure Resource Manager resources, like here:
+
+![image](https://user-images.githubusercontent.com/1712635/38335264-9eef63b6-3812-11e8-9d97-5f5bf598f846.png) 
+
 Finally, you could even connect to the SQL Server container in ACI with [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms), as shown below:
 
 Connect to the SQL Server container in ACI:
