Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -13,6 +13,10 @@ For further information on ACI, check the documentation here: https://docs.micro
 There can be variations about deploying the eShopModernizing apps into ACI such as deploying just one of the apps (MVC app, WebForms app or WCF service). In this global scenario shown below you can see the the apps deployed as containers plus the SQL Server container deployed into ACI (Azure Container Instances).
 
 ============ TBD ===============
+============ TBD ===============
+============ TBD ===============
+============ TBD ===============
+============ TBD ===============
 
 ## Use Azure Cloud Shell to run Azure CLI commands
 The Azure Cloud Shell is a free interactive shell that you can use to run the Azure CLI steps in this walkthrough. 
@@ -36,7 +40,7 @@ You can create a resource group with the `az group create` command from the **Az
 
 The following example creates a resource group named `eShopModernizedACI` in the `westus` datacenter in Azure.
 
-`az group create --name eShopModernizedACI --location westus`
+`az group create --name YoureShopModernizedACIResGroup --location westus`
 
 ## Create/Deploy the SQL Server container into ACI 
 
@@ -53,7 +57,7 @@ After a few seconds, the command's execution will respond with the container inf
 
 ![image](https://user-images.githubusercontent.com/1712635/38328528-01ad06ce-3800-11e8-94c4-d775eb1de47f.png)
 
-It is important to note that you won't be able to use the container right away (that's why the initial state in the JSON response says **"provisioningState": "Creating"**) so you'll need to wait a few minutes until the SQL image is pulled into ACI. Then, it'll be ready to use.
+It is important to note that you won't be able to use the SQL container right away (that's why the initial state in the JSON response says **"provisioningState": "Creating"**) so you'll need to wait a few minutes until the SQL image is pulled into ACI. Then, it'll be ready to use.
 
 You can check the state of the container/container-group with the command `az container show` like the following command:
 
@@ -119,7 +123,38 @@ TBD az container create ---------
 
 After a few seconds, the command's execution will respond with the container information, like in the following execution:
 
-TBD - SCREENSHOT
+`az container create --image eshop/modernizedmvc --resource-group YoureShopModernizedACIResGroup --location westus --name mvc-windows-eshop-container-group --os-type Windows --cpu 2 --memory 1.5 --dns-name-label your-eshop-mvc --ip-address public --ports 80 --environment-variables UseMockData=False ConnectionString="Server=your-eshop-sql.westus.azurecontainer.io;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=YOUR_PASSWORD" UseCustomizationData=False UseAzureStorage=False --verbose`
 
+![image](https://user-images.githubusercontent.com/1712635/38335690-081e95fe-3814-11e8-8cda-278a727425ff.png)
 
+Again, you can check the state of the container/container-group with the command `az container show` like the following command:
 
+`az container show --name mvc-windows-eshop-container-group --resource-group YoureShopModernizedACIResGroup`
+
+The MVC container will be ready to use when you see the following in the response:
+**"provisioningState": "Succeeded"**
+
+It is also important to find out what's its final public IP and fully qualified DNS name that you can find as part of the JSON response:
+
+    "ipAddress": {
+      "additionalProperties": {},
+      "dnsNameLabel": "your-eshop-mvc",
+      "fqdn": "your-eshop-mvc.westus.azurecontainer.io",
+      "ip": "26.93.141.238",
+      "ports": [
+        {
+          "additionalProperties": {},
+          "port": 80,
+          "protocol": "TCP"
+        }
+      ]
+    },
+
+To view the container's logs you can run the following command where you can see that SQL Server was correctly started:
+
+`az container logs --resource-group YoureShopModernizedACIResGroup  --name mvc-windows-eshop-container-group`
+
+========== TBD ===============
+
+At this point you should be able to run and see the MVC appliation in a browser, like here:
+URL: `http://your-eshop-mvc.westus.azurecontainer.io`
