Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -47,7 +47,7 @@ The following example creates a resource group named `eShopModernizedACI` in the
 Note: In production environments, we recommend to migrate/use Azure SQL Database which provides High Availability and many more PaaS features. However, for a Dev/Test environment, you can deploy a SQL Server container into ACI, as in this example. 
 
 You can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
-You can optionally expose the container to the internet by specifying a DNS name label.
+You can optionally expose the container to the internet by specifying a DNS name label. 
 
 Now, let's create your MSSQL container for the eShopModernizing apps with a command similar to the following:
 
@@ -115,15 +115,13 @@ Note that in this sample SQL Server container to be deployed in ACI, you are pub
 This walkthrough explains the steps on how to deploy the ASP.NET MVC app container into ACI, but very similar steps could be performed for the ASP.NET Web Forms app container or the WCF Service container.
 
 As mentioned, you can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
-You can optionally expose the container to the internet by specifying a DNS name label.
+You can optionally expose the container to the internet by specifying a DNS name label. In this case, since this is the Web application, you usually want to do this.
 
 Now, let's create your ASP.NET MVC Windows Container from eShopModernizing with a command similar to the following:
 
-TBD az container create ---------
+`az container create --image eshop/modernizedmvc --resource-group YoureShopModernizedACIResGroup --location westus --name mvc-windows-eshop-container-group --os-type Windows --cpu 2 --memory 1.5 --dns-name-label your-eshop-mvc --ip-address public --ports 80 --environment-variables UseMockData=False ConnectionString="Server=your-eshop-sql.westus.azurecontainer.io;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=YOUR_PASSWORD" UseCustomizationData=False UseAzureStorage=False --verbose`
 
 After a few seconds, the command's execution will respond with the container information, like in the following execution:
-
-`az container create --image eshop/modernizedmvc --resource-group YoureShopModernizedACIResGroup --location westus --name mvc-windows-eshop-container-group --os-type Windows --cpu 2 --memory 1.5 --dns-name-label your-eshop-mvc --ip-address public --ports 80 --environment-variables UseMockData=False ConnectionString="Server=your-eshop-sql.westus.azurecontainer.io;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=YOUR_PASSWORD" UseCustomizationData=False UseAzureStorage=False --verbose`
 
 ![image](https://user-images.githubusercontent.com/1712635/38335690-081e95fe-3814-11e8-8cda-278a727425ff.png)
 
