Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -148,11 +148,11 @@ It is also important to find out what's its final public IP and fully qualified 
       ]
     },
 
-To view the container's logs you can run the following command where you can see that SQL Server was correctly started:
-
-`az container logs --resource-group YoureShopModernizedACIResGroup  --name mvc-windows-eshop-container-group`
-
-========== TBD ===============
-
 At this point you should be able to run and see the MVC appliation in a browser, like here:
 URL: `http://your-eshop-mvc.westus.azurecontainer.io`
+
+![image](https://user-images.githubusercontent.com/1712635/38338301-e1d19eaa-381d-11e8-969b-3b44bc78f703.png)
+
+Since the app is using the connection string pointing to the SQL Server container, the app creates the database the first time it runs and the database still doesn't exist by using code in the app based on **Entity Framework Migrations**. That's why the first execution of the app takes longer.
+Once the app has the database created in the SQL Container any data operation like querying and persisting the data is working against the database in that SQL Server container.
+
