--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -148,7 +148,7 @@ It is also important to find out what's its final public IP and fully qualified 
       ]
     },
 
-At this point you should be able to run and see the MVC appliation in a browser, like here:
+At this point you should be able to run and see the MVC application in a browser, like here:
 URL: `http://your-eshop-mvc.westus.azurecontainer.io`
 
 ![image](https://user-images.githubusercontent.com/1712635/38338301-e1d19eaa-381d-11e8-969b-3b44bc78f703.png)
