--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -153,6 +153,7 @@ URL: `http://your-eshop-mvc.westus.azurecontainer.io`
 
 ![image](https://user-images.githubusercontent.com/1712635/38338301-e1d19eaa-381d-11e8-969b-3b44bc78f703.png)
 
-Since the app is using the connection string pointing to the SQL Server container, the app creates the database the first time it runs and the database still doesn't exist by using code in the app based on **Entity Framework Migrations**. That's why the first execution of the app takes longer.
-Once the app has the database created in the SQL Container any data operation like querying and persisting the data is working against the database in that SQL Server container.
+The first time you run the MVC application, the application detects that the database still doesn't exist, but since the app is using the connection string provided as environment variable and it is pointing to the SQL Server container, the app creates the database the first time it runs by using C# code in the app based on **Entity Framework Migrations**. 
+That's why the first execution of the MVC app takes longer than next times.
+Once the app has the database created in the SQL Container any data operation in the MVC app like querying and persisting the data is working against the database in that SQL Server container in ACI.
 
