Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -148,6 +148,10 @@ It is also important to find out what's its final public IP and fully qualified 
       ]
     },
 
+Now, if you go again to your Azure Resource group in the portal, you should see both containers running in ACI:
+
+![image](https://user-images.githubusercontent.com/1712635/38338670-59b09c86-381f-11e8-896e-e6480835da99.png) 
+
 At this point you should be able to run and see the MVC application in a browser, like here:
 URL: `http://your-eshop-mvc.westus.azurecontainer.io`
 
