--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -161,8 +161,8 @@ The first time you run the MVC application, the application detects that the dat
 That's why the first execution of the MVC app takes longer than next times.
 Once the app has the database created in the SQL Container any data operation in the MVC app like querying and persisting the data is working against the database in that SQL Server container in ACI.
 
-## Key takeaways
+## Key takeaways about ACI (Azure Container Instances)
 
-Deploying Windows Containers with either SQL Server or full .NET Framework / ASP.NET into Azure Container Instances is not quite as fast as deploying to a regular Docker Host (like a Windows Server 2016 with Windows Containers) because the Docker image has to be downloaded every time and the size of the [SQL container image (15.1 GB)](https://hub.docker.com/r/microsoft/mssql-server-windows-developer/) or the [ASP.NET container image (13.9 GB)](https://hub.docker.com/r/microsoft/aspnet/) are significantly large, however it is much cheaper than maintaining your own docker host (Windows Server 2016 with Windows Containers VM in Azure). 
+Deploying Windows Containers with either SQL Server or full .NET Framework / ASP.NET into Azure Container Instances (ACI) is not quite as fast as deploying to a regular Docker Host (like a Windows Server 2016 with Windows Containers) because the Docker image has to be downloaded every time and the size of the [SQL container image (15.1 GB)](https://hub.docker.com/r/microsoft/mssql-server-windows-developer/) or the [ASP.NET container image (13.9 GB)](https://hub.docker.com/r/microsoft/aspnet/) are significantly large, however it is much cheaper than maintaining your own docker host (Windows Server 2016 with Windows Containers VM in Azure) not to mention a whole orchestrator like Kubernetes in Azure (AKS/ACS) or Azure Service Fabric which are, on the other hand, great choices for production deployments. 
 
-As main conclusion, using Azure Container Instances is a  very compelling option for Dev/Test scenarios and in CI/CD pipelines.
+As main conclusion, using Azure Container Instances is a very compelling option for Dev/Test scenarios and in CI/CD pipelines.
