Updated 03. Deploying eShopModernizing to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-to-ACI-(Azure-Container-Instances).md
@@ -46,8 +46,8 @@ The following example creates a resource group named `eShopModernizedACI` in the
 
 Note: In production environments, we recommend to migrate/use Azure SQL Database which provides High Availability and many more PaaS features. However, for a Dev/Test environment, you can deploy a SQL Server container into ACI, as in this example. 
 
-You can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
-You can optionally expose the container to the internet by specifying a DNS name label. 
+In ACI, you can create a container by providing a name, a Docker image, and an Azure resource group to the [az container create](https://docs.microsoft.com/en-us/cli/azure/container#az_container_create) command. 
+You can optionally expose the container to the internet by specifying a DNS name label. In the case of a SQL container you want to do that so we can access the databases, including from your dev PC by using SQL Server Management Studio.
 
 Now, let's create your MSSQL container for the eShopModernizing apps with a command similar to the following:
 
@@ -57,7 +57,7 @@ After a few seconds, the command's execution will respond with the container inf
 
 ![image](https://user-images.githubusercontent.com/1712635/38328528-01ad06ce-3800-11e8-94c4-d775eb1de47f.png)
 
-It is important to note that you won't be able to use the SQL container right away (that's why the initial state in the JSON response says **"provisioningState": "Creating"**) so you'll need to wait a few minutes until the SQL image is pulled into ACI. Then, it'll be ready to use.
+It is important to note that you won't be able to use the SQL container right away (that's why the initial state in the JSON response says **"provisioningState": "Creating"**) so you'll need to wait a few minutes until the SQL image is pulled into ACI and the container is started. Then, it'll be ready to use.
 
 You can check the state of the container/container-group with the command `az container show` like the following command:
 
@@ -108,8 +108,7 @@ You can delete the SQL container from ACI with:
 `az container delete --name your-mssql-windows-eshop-container-group --resource-group YoureShopModernizedACIResGroup`
 
 **IMPORTANT SECURITY NOTE FOR THE SQL CONTAINER:**
-Note that in this sample SQL Server container to be deployed in ACI, you are publishing the SQL Server port (1433) on a public IP with a related public DNS name. This is okay for a test if you want to access the SQL Server container from [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms) at your local dev machine, but for more permanent SQL Server deployments, you should not make the SQL Server container with public/Internet access, but only allowing internal access from Azure.
-
+Note that in this sample SQL Server container to be deployed in ACI, you are publishing the SQL Server port (1433) on a public IP with a related public DNS name. This is okay for a test if you want to access the SQL Server container from [SQL Server Management Studio](https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms) at your local dev machine, but for production-ready databases, you might want to use a secured and HA (High Available) database system like Azure SQL Database.
 
 ## Create/Deploy the ASP.NET MVC app container into ACI
 This walkthrough explains the steps on how to deploy the ASP.NET MVC app container into ACI, but very similar steps could be performed for the ASP.NET Web Forms app container or the WCF Service container.
@@ -157,8 +156,8 @@ URL: `http://your-eshop-mvc.westus.azurecontainer.io`
 
 ![image](https://user-images.githubusercontent.com/1712635/38338301-e1d19eaa-381d-11e8-969b-3b44bc78f703.png)
 
-The first time you run the MVC application, the application detects that the database still doesn't exist, but since the app is using the connection string provided as environment variable and it is pointing to the SQL Server container, the app creates the database the first time it runs by using C# code in the app based on **Entity Framework Migrations**. 
-That's why the first execution of the MVC app takes longer than next times.
+The first time you run the MVC application, the eShopModernizedMVC application detects that the database still doesn't exist, but since the app is using the connection string provided as environment variable and it is pointing to the SQL Server container, the app creates the database the first time it runs by using C# code in the app based on **Entity Framework Migrations**. 
+That's why the first execution of the MVC app takes longer than the next times.
 Once the app has the database created in the SQL Container any data operation in the MVC app like querying and persisting the data is working against the database in that SQL Server container in ACI.
 
 ## Key takeaways about ACI (Azure Container Instances)
