Updated 03. Deploying eShopModernizing Apps to ACI (Azure Container Instances) (markdown)

--- a/03.-Deploying-eShopModernizing-Apps-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-eShopModernizing-Apps-to-ACI-(Azure-Container-Instances).md
@@ -2,7 +2,7 @@
 Azure Container Instances (ACI) is the quickest way to have a Containers dev/test/staging environment where you can deploy single instances of containers.
 
 ##  Goals for this walkthrough
-This walkthrough shows you the main scenarios when deploying Windows Containers to Azure Container Instances (ACI) and how you can deploy eShopModernizing into ACI.
+This walkthrough shows you the main scenarios when deploying Windows Containers to Azure Container Instances (ACI) and how you can deploy eShopModernizing Apps into ACI.
 
 ## Introduction to Azure Container Instances (ACI)
 Azure Container Instances makes it easy to create and manage Docker containers in Azure, without having to provision virtual machines or adopt a higher-level service. With ACI, you can directly deploy a Windows container in Azure and expose it to the internet with a fully qualified domain name (FQDN) in a matter of seconds (Provided that you have the Windows Container image ready in a Docker registry like Docker Hub or Azure Container Registry).
