--- a/03.-Deploying-the-Apps-to-ACI-(Azure-Container-Instances).md
+++ b/03.-Deploying-the-Apps-to-ACI-(Azure-Container-Instances).md
@@ -10,13 +10,10 @@ Azure Container Instances makes it easy to create and manage Docker containers i
 For further information on ACI, check the documentation here: https://docs.microsoft.com/en-us/azure/container-instances/ 
 
 ##  Scenarios
-There can be variations about deploying the eShopModernizing apps into ACI such as deploying just one of the apps (MVC app, WebForms app or WCF service). In this global scenario shown below you can see the the apps deployed as containers plus the SQL Server container deployed into ACI (Azure Container Instances).
+There can be variations about deploying the eShopModernizing apps into ACI such as deploying just one or all of the apps (MVC app, WebForms app or WCF service). 
+In the following scenario shown below you can see the ASP.NET MVC app plus the SQL Server container both of them deployed as containers into ACI (Azure Container Instances).
 
-============ TBD ===============
-============ TBD ===============
-============ TBD ===============
-============ TBD ===============
-============ TBD ===============
+![image](https://user-images.githubusercontent.com/1712635/38395601-9258dd0e-38e8-11e8-8b42-cafff5f93c57.png)
 
 ## Use Azure Cloud Shell to run Azure CLI commands
 The Azure Cloud Shell is a free interactive shell that you can use to run the Azure CLI steps in this walkthrough. 
