Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -1,17 +1,18 @@
 ##  Overview
-TBD
+When deploying Docker containers (including Windows Containers and Linux containers) into production environments, you need to deploy pull its related Docker image first ("docker pull") from a Docker Registry.
+Therefore, if you are creating a custom application which is running as a container, you also need to know how to create its related custom Docker image and how to publish it into a Docker Registry. 
 
 This walkthrough assumes a basic understanding of Docker. You can learn about Docker by reading the [Docker Overview](https://docs.docker.com/engine/understanding-docker/).
 
 ##  Goals for this walkthrough
 This post describes how to create a custom eShopModernizedMVC Windows Container image (Docker image for Windows Containers) in your local development PC with Visual Studio and 'Docker for Windows' installed and then how to publish it into a Docker Registry. 
 
-A Docker Registry is a public or private store which contains Docker container images, either for Linux or Windows.
+A Docker Registry is a public or private store, running on a public cloud or on-premises, which contains Docker container images, either for Linux or Windows.
 An example od a Docker Registry is 'Docker Hub' and 'Azure Container Registry'. Both are public registries and both allow private repositories of images.
  
 A few examples of a Docker registry and its related taxonomy is shown below.
 
-
+![image](https://user-images.githubusercontent.com/1712635/38648889-75bd77da-3da8-11e8-8f6d-7e45a30af502.png)
 
 You can also do the same action but in an automated way from your CI or build pipelines.
 
