Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -1,6 +1,7 @@
 ##  Overview
-When deploying Docker containers (including Windows Containers and Linux containers) into production environments, you need to deploy pull its related Docker image first ("docker pull") from a Docker Registry.
-Therefore, if you are creating a custom application which is running as a container, you also need to know how to create its related custom Docker image and how to publish it into a Docker Registry. 
+When deploying a Docker container into production environments (including Windows Containers and Linux containers), you need to deploy it by pulling its related Docker image ("docker pull") from a Docker Registry, in the first place. After that, you'll be able to deploy it to multiple environments like a regular Docker Host (VM), Azure Container Instances, Kubernetes, Service Fabric, Azure App Service, etc.
+
+But the common denominator that you need to use is a Docker Registry. When you are creating a custom application which will be running as a container, you also need to know how to create its related custom Docker image and how to publish it into a Docker Registry. 
 
 This walkthrough assumes a basic understanding of Docker. You can learn about Docker by reading the [Docker Overview](https://docs.docker.com/engine/understanding-docker/).
 
