Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -15,17 +15,17 @@ A few examples of a Docker registry and its related taxonomy is shown below.
 
 ![image](https://user-images.githubusercontent.com/1712635/38648889-75bd77da-3da8-11e8-8f6d-7e45a30af502.png)
 
-You can also do the same action but in an automated way from your CI or build pipelines.
-
 Publishing your custom Docker images in a Docker Registry requires a 2-step process:
 1. Deploy a Service Fabric cluster into Azure (Or any other environment)
 2. Deploy the application and related resources into the Service Fabric cluster
 
-However, before trying this scenario deploying to an orchestrator, it is recommended that you:
-1. Familiarize yourself with the previous sections about containerizing existing .NET Framework apps.
-2. You’ve been testing the sample applications (eShopModernizedMVC and/or eShopModernizedWebForms) and running them on a local Docker for Windows dev machine.
+You can also do the same action but in an automated way from your CI or build pipelines like in Visual Studio Team Services (VSTS) or Jenkins.
 
-##  Scenario
+##  Scenario 1: Create your Windows Container image with Docker CLI and Visual Studio
 
-### Scenario A: Direct deployment to Service Fabric cluster from development environment
-![image](https://user-images.githubusercontent.com/1712635/31355821-a1530ef8-acf0-11e7-86f7-3b71a2549f6e.png)
+************** TBD image ************** 
+
+##  Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI
+
+************** TBD image ************** 
+
