Updated 02. How to containerize the .NET Framework web apps with Windows Containers and Docker (markdown)

--- a/02.-How-to-containerize-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
+++ b/02.-How-to-containerize-the-.NET-Framework-web-apps-with-Windows-Containers-and-Docker.md
@@ -12,8 +12,13 @@ This Walkthrough covers the three approaches although it offers further details 
 
 ##  Scenario 1: Containerize ASP.NET MVC or Web Forms apps
 In this scenario you will containerize ASP.NET MVC or Web Forms apps (Traditional ASP.NET frameworks in .NET Framework 4.x).
-The diagram below shows the scenario for the containerized eShop legacy applications.
+
+The diagram below shows the scenario for the containerized eShop legacy applications running in a development PC with Docker for Windows.
 ![image](https://user-images.githubusercontent.com/1712635/30395628-9c4bff98-987b-11e7-82ca-89a1648f3bdc.png)
+
+But, under the covers, in order to run a container you need to create a Docker image and have it ready in your local Docker image repository. That is done under the covers by Visual Studio when you run it with F5 or Ctrl+F5:
+
+![image](https://user-images.githubusercontent.com/1712635/38649970-32243986-3dae-11e8-9fce-37128758bfff.png)
 
 ## Prerequisites
 - Windows 10 (For the developer machine)
