Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -16,12 +16,18 @@ A few examples of a Docker registry and its related taxonomy is shown below.
 ![image](https://user-images.githubusercontent.com/1712635/38648889-75bd77da-3da8-11e8-8f6d-7e45a30af502.png)
 
 Publishing your custom Docker images in a Docker Registry requires a 2-step process:
-1. Deploy a Service Fabric cluster into Azure (Or any other environment)
-2. Deploy the application and related resources into the Service Fabric cluster
+1. Create your custom Docker image (Windows Container image, in this case)
+2. Publish/Push your custom Docker image into a Docker Registry (i.e. Docker Hub or Azure Container Registry)
 
 You can also do the same action but in an automated way from your CI or build pipelines like in Visual Studio Team Services (VSTS) or Jenkins.
 
 ##  Scenario 1: Create your Windows Container image with Docker CLI and Visual Studio
+
+As explained in the previous post titled "How to containerize the .NET Framework web apps with Windows Containers and Docker", the following image shows you the environment in your local development PC when creating and running your containers locally.
+
+![image](https://user-images.githubusercontent.com/1712635/38649970-32243986-3dae-11e8-9fce-37128758bfff.png)
+
+However, when you need to deploy your image as a container into production environments, you first need to publish/push your images into a Docker Registry (i.e. Docker Hub or Azure Container Registry) as in the following evolved figure.
 
 ************** TBD image ************** 
 
